Added link to github repo on help page, removed some comments

--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -10,7 +10,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p>Thank you for visiting. Please check the github repository for any additional information or issues.</p>
+            <p>Thank you for visiting. Please check the <a href="https://github.com/wolffpc/iss-locator" target="_blank">GitHub repository</a>> for any additional information or issues.</p>
         </div>
         
         {{>footer}}
